--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "playwright_js_ecommerce",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {},
   "keywords": [],
   "author": "Anton Kolupaiev",
   "license": "ISC",
-  "type": "commonjs",
   "description": "",
   "dependencies": {
     "playwright-chromium": "^1.49.1",
