--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,6 +28,16 @@ jobs:
         run: |
           npm install
           npm install express
+          sudo apt update
+          sudo apt install -y libwoff2dec1.0.2 libvpx7 libevent-2.1-7 libopus0 \
+            libgstallocators-1.0-0 libgstapp-1.0-0 libgstpbutils-1.0-0 \
+            libgstaudio-1.0-0 libgstgl-1.0-0 libgsttag-1.0-0 libgstvideo-1.0-0 \
+            libgstcodecparsers-1.0-0 libgstfft-1.0-0 libflite1 libflite_usenglish1 \
+            libflite_cmu_grapheme_lang1 libflite_cmu_grapheme_lex1 libflite_cmu_indic_lang1 \
+            libflite_cmu_indic_lex1 libflite_cmulex1 libflite_cmu_time_awb1 \
+            libflite_cmu_us_awb1 libflite_cmu_us_kal16 libflite_cmu_us_kal \
+            libflite_cmu_us_rms libflite_cmu_us_slt libavif13 libharfbuzz-icu0 \
+            libhyphen0 libmanette0 libgles2 libx264
 
       - name: Install Playwright and Allure Commandline via NPM
         run: |
