--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,12 +31,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install
+          npm ci
           npm install express
-          sudo apt-get install -y libx11-xcb1 libxcomposite1 libxdamage1 libxrandr2 libxtst6 \
-            libappindicator3-1 libgdk-pixbuf2.0-0 libdbus-1-3 libsecret-1-0 \
-            libnss3 libxss1 libasound2 libatk-bridge2.0-0 libatk1.0-0 \
-            libcups2 libgdk-pixbuf2.0-0
 
       - name: Install Playwright and Allure Commandline via NPM
         run: |
@@ -44,8 +40,8 @@ jobs:
           npm install allure-commandline --save-dev
           npm install allure-playwright --save-dev
 
-      - name: Install Allure Playwright reporter
-        run: npm install allure-playwright --save-dev
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
       - name: Start Express server for mock test
         run: |
