--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,14 +24,18 @@ jobs:
         with:
           node-version: "18.x"
 
-      - name: Install dependencies
+      - name: Install test dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get upgrade -y
-          sudo apt-get install -y allure
-          npm install
-          npm install -g allure-commandline
-          npm install playwright allure-commandline allure-playwright --save-dev express
+          npm install --save-dev allure-commandline allure-playwright playwright express
+
+      # - name: Install dependencies
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get upgrade -y
+      #     sudo apt-get install -y allure
+      #     npm install
+      #     npm install -g allure-commandline
+      #     npm install playwright allure-commandline allure-playwright --save-dev express
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
@@ -69,23 +73,8 @@ jobs:
         run: |
           npx playwright test --reporter=allure-playwright
 
-      - name: Check Allure results
-        run: |
-          if [ ! -d "./allure-results" ] || [ -z "$(ls -A ./allure-results)" ]; then
-            echo "No Allure results found. Skipping report generation."
-            exit 1
-          fi
-
-      - name: Check Allure version (to confirm it's installed)
-        run: |
-          allure --version
-
       - name: Generate Allure report
         run: |
-          if [ ! -d "./allure-results" ] || [ -z "$(ls -A ./allure-results)" ]; then
-            echo "No Allure results found. Skipping report generation."
-            exit 1
-          fi
           allure generate ./allure-results --clean
 
       - name: Upload Allure report
@@ -108,36 +97,16 @@ jobs:
           name: playwright-screenshots
           path: ./playwright/screenshots
 
-      - name: Create gh-pages branch if not exists
+      - name: Configure GitHub token for authentication
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          if ! git ls-remote --exit-code origin gh-pages; then
-            git checkout --orphan gh-pages
-            git rm -rf .  # Clean up the directory
-            echo "Placeholder for GitHub Pages" > index.html
-            git add index.html
-            git commit -m "Initialize gh-pages branch"
-            git push origin gh-pages
-          fi
-
-      - name: Stash uncommitted changes
-        run: |
-          git stash --include-untracked
-
-      - name: Clean old Allure report on gh-pages
-        run: |
-          git fetch origin gh-pages
-          git checkout gh-pages
-          rm -rf ./*  # Remove old files
-          git add .
-          git commit -m "Clean old Allure report"
-          git push origin gh-pages
-
-      - name: Clone gh-pages branch and update report
-        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git clone --branch gh-pages --single-branch https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} gh-pages
           rm -rf gh-pages/*
           cp -r ./allure-report/* gh-pages/
           cd gh-pages
           git add .
           git commit -m "Update Allure report"
-          git push origin gh-pages
+          git push
