--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "playwright-chromium": "^1.49.1",
     "playwright-firefox": "^1.49.1",
     "playwright-webkit": "^1.49.1"
