--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Run Playwright tests (including the one with mock server)
         run: |
-          npx playwright test --reporter=allure-playwright
+          npx playwright test --reporter=allure-playwright --verbose
 
       - name: Generate Allure report
         run: |
