--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -45,7 +45,7 @@ jobs:
           const app = express();
           const port = 3000;
 
-          app.use(express.static('playwright'));
+          app.use(express.static('.'))
 
           app.get('/api/productsList', (req, res) => {
             res.json({ products: [{ name: 'Mocked Product' }] });
