--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -78,6 +78,7 @@ jobs:
 
       - name: Upload Allure report
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: allure-report
           path: ./allure-report
