--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -103,6 +103,9 @@ jobs:
           name: playwright-report
           path: playwright-report/
 
+      - name: List contents of allure-results directory
+        run: ls -l allure-results
+
       - name: Configure GitHub token for authentication
         if: always()
         continue-on-error: true
@@ -113,7 +116,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git clone --branch gh-pages --single-branch https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} gh-pages
           rm -rf gh-pages/*
-          if [ -d "./allure-report" ]; then cp -r ./allure-report/* gh-pages/; fi
+          [ -d "./allure-report" ] && cp -r ./allure-report/* gh-pages/ || echo "Allure report not found, skipping upload"
           cd gh-pages
           git add .
           git commit -m "Update Allure report"
