--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -67,14 +67,20 @@ jobs:
         run: |
           npx playwright test --reporter=list,allure-playwright,html
 
+      - name: List contents of allure-results directory
+        run: ls -l allure-results || echo "Directory allure-results not found or empty."
+
       - name: Generate Allure report
         run: |
           if [ -d "./allure-results" ]; then
-            allure generate ./allure-results --clean
+            allure generate ./allure-results --clean || echo "Failed to generate Allure report."
           else
             echo "No allure-results directory found, skipping report generation."
           fi
         continue-on-error: true
+
+      - name: Log errors
+        run: dmesg | tail -n 20
 
       - name: Upload Allure report
         uses: actions/upload-artifact@v4
@@ -82,6 +88,7 @@ jobs:
         with:
           name: allure-report
           path: ./allure-report
+          if-no-files-found: warn
 
       - name: Publish Allure results
         uses: actions/upload-artifact@v4
