--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -119,12 +119,24 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git clone --branch gh-pages --single-branch https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} gh-pages
-          rm -rf ./*
-          [ -d "./allure-report" ] && cp -r ./allure-report/* gh-pages/ || echo "Allure report not found, skipping upload"
+          if git ls-remote --exit-code --heads https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} gh-pages; then
+            git clone --branch gh-pages --single-branch https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} gh-pages
+          else
+            git clone https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} gh-pages
+            cd gh-pages
+            git checkout --orphan gh-pages
+            git rm -rf .
+            echo "Initializing gh-pages branch" > README.md
+            git add README.md
+            git commit -m "Initialize gh-pages branch"
+            git push -u origin gh-pages
+            cd ..
+          fi
           cd gh-pages
+          rm -rf ./*
+          [ -d "../allure-report" ] && cp -r ../allure-report/* . || echo "Allure report not found, skipping upload"
           git add .
-          git commit -m "Update Allure report"
+          git commit -m "Update Allure report" || echo "No changes to commit"
           git push --force
 
       - name: Stop Express server
@@ -134,5 +146,3 @@ jobs:
           else
             echo "Server is stopped and not running"
           fi
-
-#          # rm -rf gh-pages/*
