--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -125,17 +125,19 @@ jobs:
             git clone https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} gh-pages
             cd gh-pages
             git checkout --orphan gh-pages
-            git rm -rf .
+            git rm -rf . 
             echo "Initializing gh-pages branch" > README.md
             git add README.md
             git commit -m "Initialize gh-pages branch"
             git push -u origin gh-pages
-            cd ..
+            cd .. 
           fi
+
+          # Копіюємо звіт Allure в папку docs
           cd gh-pages
           rm -rf ./*
-          [ -d "../allure-report" ] && cp -r ../allure-report/* . || echo "Allure report not found, skipping upload"
-          git add .
+          [ -d "../allure-report" ] && cp -r ../allure-report/* ./docs/ || echo "Allure report not found, skipping upload"
+          git add ./docs/*
           git commit -m "Update Allure report" || echo "No changes to commit"
           git push --force
 
