--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -114,6 +114,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          mkdir -p ./docs
           cp -r ./allure-report/* ./docs/
 
       - name: Stop Express server
