clear gh-pages history

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -77,6 +77,14 @@ jobs:
       #       echo "No previous history to clean."
       #     fi
 
+      - name: Reset gh-pages branch (optional)
+        run: |
+          echo "Resetting gh-pages branch to reduce size..."
+          git checkout gh-pages || git checkout -b gh-pages
+          git rm -rf .
+          git commit -m "Reset gh-pages to clean history"
+          git push origin gh-pages --force
+
       - name: Build Allure report
         uses: simple-elf/allure-report-action@v1.7
         if: always()
