--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -63,7 +63,13 @@ jobs:
         run: |
           echo "Resetting and cleaning gh-pages branch..."
           git init
-          git remote add origin https://github.com/${{ github.repository }}
+          if git remote | grep -q origin; then
+            echo "Remote origin already exists. Updating its URL..."
+            git remote set-url origin https://github.com/antnikol/Playwright_JS_ecommerce
+          else
+            echo "Adding remote origin..."
+            git remote add origin https://github.com/antnikol/Playwright_JS_ecommerce
+          fi
           git fetch origin gh-pages || echo "No existing gh-pages branch found."
           git checkout gh-pages || git checkout -b gh-pages
           git rm -rf . # Remove all files in the branch
